update all files

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="css/styles.css">
   
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
   <main>
     <div class="main-container">
       <div class="img-container">
-        <img src="img/image-qr-code.png" alt="QR code">
+        <img class="qr-img" src="img/image-qr-code.png" alt="QR code">
       </div>
       <div class="text-container">
         <h1>Improve your front-end skills by building projects</h1>
@@ -28,8 +26,11 @@
   </main>
   
   <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Maame Yaa Serwaa Bona-Mensa</a>.
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="mbonamensa.netlify.app">Maame Yaa Serwaa Bona-Mensa</a>.
+    </p> 
   </footer>
 </body>
+
 </html>
