add final updates

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <!-- Stylesheet -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Icon -->
+  <script src="https://kit.fontawesome.com/e229c815ae.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | QR code component</title>
 </head>
 
 <body>
+  
   <main>
+    <i class="fa-solid fa-sun"></i>
     <div class="main-container">
       <div class="img-container">
         <img class="qr-img" src="img/image-qr-code.png" alt="QR code">
@@ -25,12 +29,13 @@
     </div>
   </main>
   
-  <footer class="attribution">
+  <footer>
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="mbonamensa.netlify.app">Maame Yaa Serwaa Bona-Mensa</a>.
     </p> 
   </footer>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
