--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Icon -->
   <script src="https://kit.fontawesome.com/e229c815ae.js" crossorigin="anonymous"></script>
   
-  <title>Frontend Mentor | QR code component</title>
+  <title>Frontend Mentor | QR code by Maame</title>
 </head>
 
 <body>
