--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <i class="fa-solid fa-sun"></i>
     <div class="main-container">
       <div class="img-container">
-        <img class="qr-img" src="img/image-qr-code.png" alt="QR code">
+        <img class="qr-img" src="img/image-qr-code.png" alt="Frontend Mentor website QR code">
       </div>
       <div class="text-container">
         <h1>Improve your front-end skills by building projects</h1>
