update all files with accessibility fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
   
   <main>
-    <i class="fa-solid fa-sun"></i>
+    <button title="toggle dark or light mode" aria-label="toggle dark or light mode">
+      <i class="fa-solid fa-sun"></i>
+    </button>
     <div class="main-container">
       <div class="img-container">
         <img class="qr-img" src="img/image-qr-code.png" alt="QR code">
