fix broken website link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <footer>
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="mbonamensa.netlify.app">Maame Yaa Serwaa Bona-Mensa</a>.
+      Coded by <a href="https://mbonamensa.netlify.app">Maame Yaa Serwaa Bona-Mensa</a>.
     </p> 
   </footer>
   <script src="js/index.js"></script>
